Adding musgen examples

--- a/research/musgen/index.html
+++ b/research/musgen/index.html
@@ -109,6 +109,7 @@
 
 
                                     </ul>
+                                    <h2>Generated monophonic music examples labeled with four emotions</h2>
 
                                     <table class="cala-szer">
                                         <tr>
