--- a/research/musgenvaecnn_4v/index.html
+++ b/research/musgenvaecnn_4v/index.html
@@ -110,7 +110,7 @@ Annotation with emotion labels was done by music experts with a university music
                                         <!--<li><a HREF="./generated_exaples">Generated exaples </a></li>-->                              
 
                                     </ul>
-                                    <h2>Generated music examples labeled with four emotions</h2>
+                                    <h2>Generated music examples labeled with four emotions using - CVAE-Mus2 model</h2>
 
                                     <table class="cala-szer">
                                         <tr>
@@ -308,7 +308,7 @@ Annotation with emotion labels was done by music experts with a university music
                         Q4 / low-high 
                     </td>
                     <td>
-                <midi-player  src="./examples/e4/new_generated_8.mid"
+                <midi-player  src="./examples/e4/new_generated_17.mid"
                               sound-font visualizer="#myVisualizer_11">
                 </midi-player>
                 <midi-visualizer type="piano-roll" id="myVisualizer_11"></midi-visualizer>
