--- a/jgResearch.html
+++ b/jgResearch.html
@@ -339,9 +339,24 @@
                                                 IEEE Access, vol. 9, pp. 129088-129101, (2021)
                                             </p>
                                         </li>
-                                         <li>
+                                        <li>
                                             <p>
-                                                ...
+                                                Grekow, J., Generowanie wielogłosowej muzyki o określonej emocji przy użyciu wariacyjnego autoenkodera, 
+                                                Przeglad Elektrotechnicznythis, 2023, 99(6), pp. 225–229
+                                            </p>
+                                        </li>
+
+                                        <li>
+                                            <p> 
+                                                Terlecki, D., Grekow, T.D., Grekow, J.,  Indoor Localisation Based on Wi-Fi Infrastructure,
+                                                Przeglad Elektrotechnicznythis, 2023, 99(7), pp. 131–134
+                                            </p>
+                                        </li>
+                                        <li>
+                                            <p>
+                                                J. Grekow, Generating Polyphonic Symbolic Emotional Music in the Style of Bach 
+                                                Using Convolutional Conditional Variational Autoencoder, 
+                                                in IEEE Access, vol. 11, pp. 93019-93031, 2023, doi: 10.1109/ACCESS.2023.3309639 
                                             </p>
                                         </li>
 
