--- a/jgResearch.html
+++ b/jgResearch.html
@@ -334,7 +334,7 @@
                                         </li>
                                         <li>
                                             <p>
-                                                J. Grekow and T. Dimitrova-Grekow, Monophonic Music Generation With 
+                                                Grekow, J. and Dimitrova-Grekow, T., Monophonic Music Generation With 
                                                 a Given Emotion Using Conditional Variational Autoencoder, 
                                                 IEEE Access, vol. 9, pp. 129088-129101, (2021)
                                             </p>
