--- a/jgResearch.html
+++ b/jgResearch.html
@@ -354,7 +354,7 @@
                                         </li>
                                         <li>
                                             <p>
-                                                J. Grekow, Generating Polyphonic Symbolic Emotional Music in the Style of Bach 
+                                                Grekow, J., Generating Polyphonic Symbolic Emotional Music in the Style of Bach 
                                                 Using Convolutional Conditional Variational Autoencoder, 
                                                 in IEEE Access, vol. 11, pp. 93019-93031, 2023, doi: 10.1109/ACCESS.2023.3309639 
                                             </p>
