--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -99,9 +99,9 @@
 
                                     <ul>  
 
-                                        <li>Awramiuk Paweł - ... </li>
-                                        <li>Wróbel Aleksandra  - ... </li>
-                                        <li>Wroblewska Joanna  - ... </li>
+                                        <li>Awramiuk Paweł - Detekcja stylu muzycznego w utworach audio z użyciem sieci neuronowych </li>
+                                        <li>Wróbel Aleksandra  - Generowanie muzyki MIDI z daną emocją </li>
+                                        <li>Wroblewska Joanna  - Rozpoznawanie emocji w plikach MIDI </li>
                                          
 
 
