--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -102,6 +102,7 @@
                                         <li>Awramiuk Paweł - Detekcja stylu muzycznego w utworach audio z użyciem sieci neuronowych </li>
                                         <li>Wróbel Aleksandra  - Generowanie muzyki MIDI z daną emocją </li>
                                         <li>Wroblewska Joanna  - Rozpoznawanie emocji w plikach MIDI </li>
+                                        <li>Dominik Olender - Detekcja przewodów elektrycznych na podstawie zdjęć</li>
                                          
 
 
