--- a/jgLinks.html
+++ b/jgLinks.html
@@ -95,15 +95,15 @@
                                 <p class="menu">Links</p>
 
                                 <p>
-                                    <a HREF="http://webpages.uncc.edu/ras/">Professor Zbigniew Raś</a></p>
+                                    <a HREF="https://webpages.uncc.edu/ras/">Professor Zbigniew Raś</a></p>
                                 <p>
-                                    <a HREF="http://www.pjwstk.edu.pl/">PJWSTK</a></p>
+                                    <a HREF="https://www.pjwstk.edu.pl/">PJWSTK</a></p>
                                 <p>
-                                    <a HREF="http://www.tu-sofia.bg/index.html">Technical
+                                    <a HREF="https://www.tu-sofia.bg/index.html">Technical
                                         University of Sofia</a> 
                                 </p>
                                 <p>
-                                    <a HREF="http://www.konservatorium-wien.ac.at/">Konservatorium
+                                    <a HREF="https://www.konservatorium-wien.ac.at/">Konservatorium
                                         Wien University</a> 
                                 </p>
                                 
