--- a/jgLinks.html
+++ b/jgLinks.html
@@ -97,13 +97,13 @@
                                 <p>
                                     <a HREF="https://webpages.uncc.edu/ras/">Professor Zbigniew Raś</a></p>
                                 <p>
-                                    <a HREF="https://www.pjwstk.edu.pl/">PJWSTK</a></p>
+                                    <a HREF="https://pja.edu.pl/">PJWSTK</a></p>
                                 <p>
                                     <a HREF="https://www.tu-sofia.bg/index.html">Technical
                                         University of Sofia</a> 
                                 </p>
                                 <p>
-                                    <a HREF="https://www.konservatorium-wien.ac.at/">Konservatorium
+                                    <a HREF="https://muk.ac.at">Konservatorium
                                         Wien University</a> 
                                 </p>
                                 
