--- a/jgLinks.html
+++ b/jgLinks.html
@@ -99,8 +99,7 @@
                                 <p>
                                     <a HREF="https://pja.edu.pl/">PJWSTK</a></p>
                                 <p>
-                                    <a HREF="https://www.tu-sofia.bg/index.html">Technical
-                                        University of Sofia</a> 
+                                    <a HREF="https://www.tu-sofia.bg/">Technical University of Sofia</a> 
                                 </p>
                                 <p>
                                     <a HREF="https://muk.ac.at">Konservatorium
