--- a/jgResearch.html
+++ b/jgResearch.html
@@ -342,14 +342,14 @@
                                         <li>
                                             <p>
                                                 Grekow, J., Generowanie wielogłosowej muzyki o określonej emocji przy użyciu wariacyjnego autoenkodera, 
-                                                Przeglad Elektrotechnicznythis, 2023, 99(6), pp. 225–229
+                                                Przeglad Elektrotechniczny, 2023, 99(6), pp. 225–229
                                             </p>
                                         </li>
 
                                         <li>
                                             <p> 
                                                 Terlecki, D., Grekow, T.D., Grekow, J.,  Indoor Localisation Based on Wi-Fi Infrastructure,
-                                                Przeglad Elektrotechnicznythis, 2023, 99(7), pp. 131–134
+                                                Przeglad Elektrotechniczny, 2023, 99(7), pp. 131–134
                                             </p>
                                         </li>
                                         <li>
