--- a/jgPraceDypl.html
+++ b/jgPraceDypl.html
@@ -103,10 +103,10 @@
                                         <li>Jakub Kimsza - Optymalizacja środowiska uruchomieniowego JVM</li>
                                         <li>Łukasz Łaniewski - Analiza strumieni i tradycyjnych pętli w języku Java</li>
                                         <li>Marcin Mironiuk - Mechanizmy synchronizacji w języku Java</li>
-
+                                        <br/>
                                         <li>Wróbel Aleksandra  - Generowanie muzyki MIDI z daną emocją </li>
                                         <li>Wroblewska Joanna  - Rozpoznawanie języka migowego za pomocą analizy obrazu </li>
-                                        <li>Dominik Olender - Detekcja przewodów elektrycznych na podstawie zdjęć</li>
+                                        
 
 
 
@@ -220,6 +220,7 @@
                                     </p>
 
                                     <ul>
+                                        <li>Dominik Olender (2025) - Detekcja przewodów elektrycznych na podstawie zdjęć</li>
                                         <li>Awramiuk Paweł (2024) - Detekcja stylu muzycznego w utworach audio z użyciem sieci neuronowych </li>
                                         <li>Wasiluk Maksymilian (2023) - Detekcja emocji w plikach muzycznych</li>
                                         <li>Jakub Miłkowski (2023) - Porównanie podejść do projektowania współczesnych API </li>
