--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <br/>
                                 </td>
                                 <td WIDTH=16%>
-                                    <p><img  class="foto" SRC="GrekowJ_Foto2.jpg" NAME="grafika2" ><br>
+                                    <p><img  class="foto" SRC="GrekowJ_Foto3.png" NAME="grafika2" ><br>
                                     </p>
                                 </td>
                             </tr>
